Fix variable naming style in freeBlockDictionary.* and binaryTreeDictionary*

XMLWordPrintable

    • gc
    • b09
    • generic
    • generic
    • Not verified

        Some files implementing the CMS collector use a style (CamelCase) inconsistent with
        general hotspot practice. The freeBlockDictionary.* and binaryTreeDictionary.*
        files have recently moved out of the CMS directories. Fix the naming style.

              Assignee:
              Jon Masamitsu (Inactive)
              Reporter:
              Jon Masamitsu (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

                Created:
                Updated:
                Resolved:
                Imported:
                Indexed: