7164144: Fix variable naming style in freeBlockDictionary.* and binaryTreeDictionary*

Fix naming style to be consistent with the predominant hotspot style.

Reviewed-by: ysr, brutisso