hotspot/src/share/vm/memory/freeBlockDictionary.hpp
@@ -51,45 +51,45 @@ class FreeBlockDictionary: public CHeapObj {
   NOT_PRODUCT(Mutex* _lock;)
 
  public:
-  virtual void       removeChunk(Chunk* fc) = 0;
-  virtual Chunk*     getChunk(size_t size, Dither dither = atLeast) = 0;
-  virtual void       returnChunk(Chunk* chunk) = 0;
-  virtual size_t     totalChunkSize(debug_only(const Mutex* lock)) const = 0;
-  virtual size_t     maxChunkSize()   const = 0;
-  virtual size_t     minSize()        const = 0;
+  virtual void       remove_chunk(Chunk* fc) = 0;
+  virtual Chunk*     get_chunk(size_t size, Dither dither = atLeast) = 0;
+  virtual void       return_chunk(Chunk* chunk) = 0;
+  virtual size_t     total_chunk_size(debug_only(const Mutex* lock)) const = 0;
+  virtual size_t     max_chunk_size()   const = 0;
+  virtual size_t     min_size()        const = 0;
   // Reset the dictionary to the initial conditions for a single
   // block.
   virtual void       reset(HeapWord* addr, size_t size) = 0;
   virtual void       reset() = 0;
 
-  virtual void       dictCensusUpdate(size_t size, bool split, bool birth) = 0;
-  virtual bool       coalDictOverPopulated(size_t size) = 0;
-  virtual void       beginSweepDictCensus(double coalSurplusPercent,
+  virtual void       dict_census_udpate(size_t size, bool split, bool birth) = 0;
+  virtual bool       coal_dict_over_populated(size_t size) = 0;
+  virtual void       begin_sweep_dict_census(double coalSurplusPercent,
                        float inter_sweep_current, float inter_sweep_estimate,
                        float intra__sweep_current) = 0;
-  virtual void       endSweepDictCensus(double splitSurplusPercent) = 0;
-  virtual Chunk*     findLargestDict() const = 0;
+  virtual void       end_sweep_dict_census(double splitSurplusPercent) = 0;
+  virtual Chunk*     find_largest_dict() const = 0;
   // verify that the given chunk is in the dictionary.
-  virtual bool verifyChunkInFreeLists(Chunk* tc) const = 0;
+  virtual bool verify_chunk_in_free_list(Chunk* tc) const = 0;
 
   // Sigma_{all_free_blocks} (block_size^2)
   virtual double sum_of_squared_block_sizes() const = 0;
 
   virtual Chunk* find_chunk_ends_at(HeapWord* target) const = 0;
-  virtual void inc_totalSize(size_t v) = 0;
-  virtual void dec_totalSize(size_t v) = 0;
+  virtual void inc_total_size(size_t v) = 0;
+  virtual void dec_total_size(size_t v) = 0;
 
   NOT_PRODUCT (
-    virtual size_t   sumDictReturnedBytes() = 0;
-    virtual void     initializeDictReturnedBytes() = 0;
-    virtual size_t   totalCount() = 0;
+    virtual size_t   sum_dict_returned_bytes() = 0;
+    virtual void     initialize_dict_returned_bytes() = 0;
+    virtual size_t   total_count() = 0;
   )
 
-  virtual void       reportStatistics() const {
+  virtual void       report_statistics() const {
     gclog_or_tty->print("No statistics available");
   }
 
-  virtual void       printDictCensus() const = 0;
+  virtual void       print_dict_census() const = 0;
   virtual void       print_free_lists(outputStream* st) const = 0;
 
   virtual void       verify()         const = 0;
